# energirobotter-ros-workspace-alex

./: .gitmodules  ARKITEKTUR.md  Animation_Commands.md  BIDRAG.md  EKSAMEN_OPLAEG.md  README.md  REPORT_NOTES.md  requirements.txt
elrik_description/: README.md
energirobotter_bringup/: README.md
energirobotter_bringup/animations/: animation_fingerguns.csv  animation_headbang.csv  gesture_no.csv  gesture_shrug.csv  gesture_wave.csv  gesture_yes.csv  idle1.csv  mimic_alexander.csv  mimic_optimus.csv  pose_handshake.csv  pose_kungfu.csv  pose_peace.csv  pose_rocknroll.csv  recording_arms_test.csv  recording_right_arm_tes.csv  recording_right_arm_test.csv  recording_right_underarm_test.csv  recording_right_wrist_test.csv  test_servos.csv
energirobotter_bringup/config/rviz/: teleoperation.rviz
energirobotter_bringup/config/servos/: servo_arm_left_params.json  servo_arm_right_params.json
energirobotter_bringup/config/zed_camera/: zed2i.yaml  zedm.yaml
energirobotter_bringup/launch/robot/: animation.launch.py  camera.launch.py  ik_control.launch.py  reachability_map.launch.py  robot_state_pub.launch.py  servos.launch.py  teleoperation_vuer.launch.py
energirobotter_bringup/launch/server/: slider_control.launch.py
pkgs_commissioning/arm_commissioning/: README.md  package.xml  setup.cfg  setup.py
pkgs_commissioning/arm_commissioning/arm_commissioning/: calibration_tool_node.py  launcher_gui_node.py  power_monitor_node.py  repeatability_node.py  step_response_node.py
pkgs_commissioning/arm_commissioning/docs/: calibration_tool.md  launcher_gui.md  power_monitor.md  repeatability.md  step_response.md
pkgs_control/animation_player/animation_player/: animation_player_node.py
pkgs_control/animation_player/animation_player/src/: csv_reader.py
pkgs_control/control_utils/: package.xml  setup.cfg  setup.py
pkgs_control/control_utils/control_utils/: pointcloud_publisher.py  target_pose_marker.py
pkgs_control/elrik_kdl_kinematics/: README.md
pkgs_control/elrik_kdl_kinematics/elrik_kdl_kinematics/: elrik_kdl_kinematics_node.py
pkgs_control/kinematics_manager/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
pkgs_control/kinematics_manager/include/kinematics_manager/: trac_ik_manager.hpp
pkgs_control/kinematics_manager/kinematics_manager/: kinematics_manager_node.py
pkgs_control/kinematics_manager/launch/: reachability_map.launch.py
pkgs_control/kinematics_manager/nodes/: reachability_map_generator.cpp  trac_ik_node.cpp
pkgs_control/kinematics_manager/src/: trac_ik_manager.cpp  trac_ik_node.cpp
pkgs_control/servo_control/: README.md  setup.py
pkgs_control/servo_control/servo_control/: servo_reset_node.py  wattson_servo_manager_node.py
pkgs_control/servo_control/servo_control/src/: driver_servos.py  driver_waveshare.py  elrik_driver_hand.py  elrik_driver_hand_left.py  elrik_driver_hand_right.py  servo_control.py  utils.py
pkgs_control/servo_control/servo_control/src/SCServo_Python/: test_waveshare.py
pkgs_control/servo_control/servo_control/src/SCServo_Python/scscl/: sync_write.py
pkgs_control/servo_control/servo_control/src/SCServo_Python/scservo_sdk/: port_handler.py  scscl.py  sms_sts.py
pkgs_control/servo_control/servo_control/src/SCServo_Python/sms_sts/: sync_write.py  sync_write_fast.py
pkgs_control/servo_control/servo_control/test_nodes/: command_flip_test_node.py  command_test_node.py  servo_driver_waveshare.py
pkgs_teleoperation/network_bridge/: README.md
pkgs_teleoperation/teleoperation/: README.md  package.xml
pkgs_teleoperation/teleoperation/teleoperation/: teleoperation_vuer_node.py
pkgs_teleoperation/teleoperation/teleoperation/src/: tracking_filter.py  tracking_transformer.py  vuer_app.py
pkgs_teleoperation/webrtc_server_camera/: README.md
pkgs_vision/: README.md
pkgs_vision/face_detection/: README.md  package.xml
pkgs_vision/face_following/: README.md
pkgs_vision/image_processing/: CMakeLists.txt  README.md  package.xml  setup.py
pkgs_vision/image_processing/image_processing/: image_rotate_node.py
pkgs_vision/image_processing/src/: image_rotate_node.cpp
pkgs_vision/mock_camera/: README.md  package.xml
pkgs_vision/mock_camera/mock_camera/: photo_pub_node.py
pkgs_vision/object_detection/: README.md  package.xml
pkgs_vision/object_detection/object_detection/: object_detection_node.py
pkgs_vision/object_detection/object_detection/src/: inference_tensorrt.py
scripts/setup/: HARDWARE_SETUP.md  clone-esp32.sh  setup-orin-nano.sh
wattson_description/: README.md
wattson_description/meshes/stl/: left_forearm.stl  left_shoulder_connection.stl  left_wrist.stl  left_wrist_connection.stl  left_wrist_x.stl  right_forearm.stl  right_shoulder.stl  right_shoulder_connection.stl  right_shoulder_x.stl  right_upper_arm.stl  right_wrist.stl  right_wrist_connection.stl  right_wrist_x.stl
wattson_description/servo_configs/: servo_arm_left_params.json  servo_arm_right_params.json  servo_hand_left_params.json  servo_hand_right_params.json  servo_head_params.json
wattson_description/urdf/: phobos_generated.urdf
wattson_description/utils/: fetch_phobos_urdf.py
