<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_commissioning</name>
  <version>0.1.0</version>
  <description>Idriftsættelses- og testværktøjer for en enkelt humanoid-arm (kalibrering, PID step-response, repeterbarhed).</description>
  <maintainer email="almc@teknologisk.dk">Alexander Christensen</maintainer>
  <license>Teknologisk Institut</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <!-- launcher_gui_node bruger tkinter (kun stdlib hvis python3-tk er installeret) -->
  <exec_depend>python3-tk</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
